--- a/customer.html
+++ b/customer.html
@@ -18,7 +18,7 @@
 	  </tr>
 	  <tr>
 		 <td>Email:</td>
-		 <td><input type="text" class="inputfield_email" name="email"></td>
+		 <td><input type="email" class="inputfield_email" name="email"></td>
 	  </tr>
 	</table> 
   <hr>
